--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="card" data-aos="zoom-in-down">
             <div class="card-body gs-card">
                 <div class="title">Ready to try Bot?</div>
-                <div class="subtitle">Invite Bot and start giving your server cool perks!</div>
+                <div class="subtitle">Invite Bot and try its awesome features now.</div>
                 <br />
                 <a class="btn btn-primary btn-lg" href="#start_link" role="button">Get started</a>
             </div><br />
