--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
 @media only screen and (max-width: 1000px) {
   #imgop {
     display: none;
+   
+  }
+}
+@media only screen and (min-width: 1000px) {
+  #imgop1 {
+    display: none;
+   
   }
 }
     </style>
@@ -43,6 +50,9 @@
             <li class="nav-item">
                 <a href="support.html" class="nav-link">Support</a>
             </li>
+            <li class="nav-item">
+                <a href="https://top.gg/bot/914758391442862100" class="nav-link">Vote Now</a>
+            </li>
         </ul>
         <div class="nav-item dropdown">
         
@@ -50,33 +60,35 @@
       <a href="https://discord.gg/BNSZcHZuU2">  <button class="btn login-btn btn-outline-accent my-2 my-sm-0" style="font-size: 10px !important;font-family: poppins !important;">DISCORD SERVER</button></a>
     </div>
 </nav>
+
 <div class="heading" data-aos="zoom-out" data-aos-delay="10">
+    <img id="imgop1" src="assets/logo.png" class="rounded mx-auto" alt="...">
     <h1 style="font-family: monospace;">Minecraft Economy</h1>
     <p class="subtitle">A bot having lots of cool commands, This bot is based on minecraft and it has economy currency like minecoins, diamonds and emeralds.</p>
     <a class="btn btn-primary btn-lg" href="#features" role="button">Get started</a>
     <a class="btn btn-secondary btn-lg" href="https://discord.com/oauth2/authorize?client_id=914758391442862100&permissions=137439345728&scope=bot" target="_blank" role="button">Add to server</a>
-    <br /><br /><br /><br /><br /><br />
+   <br><br><br><br><br><br>
 </div>
 <div class="features" id="features" data-aos="zoom-out" data-aos-delay="30">
     <div class="title">Features of Bot</div>
     <div class="subtitle">We provide you the best features in Bot!</div>
     <div class="cards">
-        <div class="card" style="width: 18rem;" data-aos="slide-up">
+        <div class="card" style="width: 18rem;"  data-aos="slide-up">
         <div class="card-body">
-            <h5 class="card-title">Future #1</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex ante, mattis vel dapibus vel, tempor facilisis justo. Vivamus dignissim ut nisi eu consequat.</p>
+            <h5 class="card-title">Minecraft Bot</h5>
+            <p class="card-text">It is the Best Minecraft Bot With Some Advanced Commands Like hunt, mine, chop, craft, cook.</p>
         </div>
     </div>
         <div class="card" style="width: 18rem;" data-aos="slide-up">
             <div class="card-body">
-                <h5 class="card-title">Future #2</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex ante, mattis vel dapibus vel, tempor facilisis justo. Vivamus dignissim ut nisi eu consequat.</p>
+                <h5 class="card-title">Premium Experience</h5>
+                <p class="card-text">It provides you with the best experience with its low ping and with the most premium features that you have ever used in an economy bot.</p>
             </div>
         </div>
         <div class="card" style="width: 18rem;" data-aos="slide-up">
             <div class="card-body">
-                <h5 class="card-title">Future #3</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ex ante, mattis vel dapibus vel, tempor facilisis justo. Vivamus dignissim ut nisi eu consequat.</p>
+                <h5 class="card-title">Secure</h5>
+                <p class="card-text">It is very secure and it's likely impossible to hack it so you did not have to take tension about your server security just invite the bot and try its premium features now in absolute free of cost.</p>
             </div>
         </div>
     </div>
@@ -110,7 +122,7 @@
                 <div class="title">Ready to try Bot?</div>
                 <div class="subtitle">Invite Bot and try its awesome features now.</div>
                 <br />
-                <a class="btn btn-primary btn-lg" href="#start_link" role="button">Get started</a>
+                <a class="btn btn-primary btn-lg" href="https://discord.com/oauth2/authorize?client_id=914758391442862100&permissions=137439345728&scope=bot" role="button">Invite Now</a>
             </div><br />
         </div>
     </div>
