--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="https://discord.com/oauth2/authorize?client_id=914758391442862100&permissions=137439345728&scope=bot">Invite</a>
             </li>
             <li class="nav-item">
-                <a href="commands.html" class="nav-link">Commands</a>
+                <a href="https://discord.gg/BNSZcHZuU2" class="nav-link">Commands</a>
             </li>
             <li class="nav-item">
                 <a href="support.html" class="nav-link">Support</a>
