--- a/support.html
+++ b/support.html
@@ -63,11 +63,11 @@
               <div class="form h-100">
                 <h3>Get Started</h3>
                 <form action="https://submit-form.com/OzywiZng" class="mb-5" method="post" id="contactForm" name="contactForm">
-                    <!-- <input
+                    <input
         type="hidden"
         name="_redirect"
-        value="https://minecrafteconomy/submit.html"
-      /> -->
+        value="https://minecrafteconomy.tk/submitted.html"
+      />
                   <div class="row">
                     <div class="col-md-6 form-group mb-3">
                       <label for="" class="col-form-label">Name</label>
