--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <link href="assets/logo.png" rel="icon">
   <link href="assets/logo.png" rel="apple-touch-icon">
     <title>Minecraft Economy</title>
+    <meta name="description" content="Minecraft Economy is a bot having lots of cool commands, This bot is based on Minecraft and it has economic currency like mine coins, diamonds, and emeralds.">
+
     <style>
 @media only screen and (max-width: 1000px) {
   #imgop {
@@ -130,9 +132,11 @@
         <div class="bot-footer">
             <!-- <img src="assets/logo.png" width="150"><br /> -->
             Copyright © Minecraft Economy - 2022
+            <br>
+          <b>  <a style="text-decoration: none;" href="termsofuse.html">Terms Of Use</a>  |  <a style="text-decoration: none;" href="privacypolicy.html">Privacy Policy</a></b>
          
-        </div><br/>
-        <div class="nouridio"> <p>Website developed by <a href="https://surfacedevelopment.tk">Surface Dev</a> </p></div>
+        </div>
+        <div class="watermark"> <p>Website developed by <a href="https://discord.gg/KmKUdQ2NjV">Surface Dev</a> </p></div>
     </div>
 </div>
  <!-- our aos data -->
