--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -139,7 +139,7 @@ We may update this Privacy Policy from time to time. Changes in our Privacy Poli
       <b>  <a style="text-decoration: none;" href="termsofuse.html">Terms Of Use</a>  |  <a style="text-decoration: none;" href="privacypolicy.html">Privacy Policy</a></b>
      
     </div>
-    <div class="watermark"> <p>Website developed by <a href="https://discord.gg/KmKUdQ2NjV">Surface Dev</a> </p></div>
+    <div class="watermark"> <p>Website developed by <a href="https://surfacedevelopment.tk">Surface Dev</a> </p></div>
 </div>
 </div>
  <!-- our aos data -->
