--- a/termsofuse.html
+++ b/termsofuse.html
@@ -123,7 +123,7 @@ Provide false or misleading information when signing up for a Site account or ot
           <b>  <a style="text-decoration: none;" href="termsofuse.html">Terms Of Use</a>  |  <a style="text-decoration: none;" href="privacypolicy.html">Privacy Policy</a></b>
          
         </div>
-        <div class="watermark"> <p>Website developed by <a href="https://discord.gg/KmKUdQ2NjV">Surface Dev</a> </p></div>
+        <div class="watermark"> <p>Website developed by <a href="https://surfacedevelopment.tk">Surface Dev</a> </p></div>
     </div>
 </div>
  <!-- our aos data -->
