--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
     <div class="cards">
         <div class="card statistic" style="width: 18rem;">
             <div class="card-body">
-                <span style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;"data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter card-title"></span>
+                <span style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;"data-purecounter-start="0" data-purecounter-end="200" data-purecounter-duration="1" class="purecounter card-title"></span>
                 <p style="font-weight: bold !important;font-size: 20px !important;">servers</p>
             </div>
         </div>
         <div class="card statistic" style="width: 18rem;">
             <div class="card-body">
-                <span style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;"data-purecounter-start="0" data-purecounter-end="79510" data-purecounter-duration="1" class="purecounter card-title"></span>
+                <span style="font-size: 50px !important;line-height: 15px !important;letter-spacing: -0.06em !important;font-weight: bold !important;"data-purecounter-start="0" data-purecounter-end="320000" data-purecounter-duration="1" class="purecounter card-title"></span>
                 <p style="font-weight: bold !important;font-size: 20px !important;">users</p>
             </div>
         </div>
@@ -138,7 +138,7 @@
           <b>  <a style="text-decoration: none;" href="termsofuse.html">Terms Of Use</a>  |  <a style="text-decoration: none;" href="privacypolicy.html">Privacy Policy</a></b>
          
         </div>
-        <div class="watermark"> <p>Website developed by <a href="https://discord.gg/KmKUdQ2NjV">Surface Dev</a> </p></div>
+        <div class="watermark"> <p>Website developed by <a href="https://surfacedevelopment.tk">Surface Dev</a> </p></div>
     </div>
 </div>
  <!-- our aos data -->
